--- a/index.html
+++ b/index.html
@@ -75,6 +75,10 @@
         </div>
     </div>
 
+    <div class="winningmsg">
+        <p class="text-sky-300 text-center mt-8"></p>
+    </div>
+
     <div class="bottom text-center text-slate-300 text-sm absolute bottom-8">
         <p>Made by <a href="">SHO</a> for a <a href="">TOP</a> Assignment </p>
     </div>
